# inf-man

./: .gitignore  CMakeLists.txt  Justfile  README.md  level.world
.github/workflows/: cmake-multi-platform.yml
include/: animator.h  bullet.h  collision.h  config.h  enemy.h  game.h  gui.h  leaderboard.h  level.h  player.h  texmanager.h  utils.h  worldfile.h
src/: animator.c  bullet.c  collision.c  enemy.c  game.c  gui.c  leaderboard.c  level.c  main.c  player.c  texmanager.c  utils.c  worldfile.c
